RESOLVED FIXED12485
XPath id() function doesn't work as root in paths
https://bugs.webkit.org/show_bug.cgi?id=12485
Summary XPath id() function doesn't work as root in paths
Alexey Proskuryakov
Reported 2007-01-30 11:56:51 PST
Not sure about the exact scope of the problem, but the attached test case fails. XPath in question: "id('a')/div".
Attachments
test case (644 bytes, text/html)
2007-01-30 11:57 PST, Alexey Proskuryakov
no flags
proposed fix (4.84 KB, patch)
2007-02-03 06:06 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-01-30 11:57:45 PST
Created attachment 12804 [details] test case
Alexey Proskuryakov
Comment 2 2007-02-03 06:06:58 PST
Created attachment 12897 [details] proposed fix Actually implement Path::doEvaluate().
Darin Adler
Comment 3 2007-02-03 12:05:55 PST
Comment on attachment 12897 [details] proposed fix Looks fine, r=me.
Alexey Proskuryakov
Comment 4 2007-02-03 12:31:22 PST
Committed revision 19388.
Note You need to log in before you can comment on or make changes to this bug.